# substrate-kitties

node/: Cargo.toml
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
